# AAO

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: feasibility.yaml  ppo_smoke.yaml  real_us_multi_asset_portfolio.yaml
configs/data/: real_us_multi_asset.yaml
configs/experiments/: ppo_real_us_multi_asset.yaml  ppo_real_us_multi_asset_smoke.yaml  ppo_synthetic.yaml
data/metadata/: features_fixture.json  synthetic_ohlcv_fixture.json
data/processed/: features_fixture.npz
data/processed/real_us_multi_asset_v1/: checksums.sha256  feature_metadata.json  features.parquet  rebalance_calendar.parquet  returns.parquet  risk_matrices.npz  split_manifest.json
data/raw/: synthetic_ohlcv_fixture.csv
data/raw/real_us_multi_asset_v1/: asset_metadata.csv  checksums.sha256  dataset_manifest.json  ohlcv.parquet  quality_report.json
docker/: Dockerfile.gpu
docs/: experiment_protocol.md  feasibility_scope.md  real_data_dictionary.md
experiments/: build_real_dataset.py  report_real_dataset.py  run_experiment_matrix.py  run_feasibility.py  select_strategic_anchor.py  train_ppo.py  train_ppo_smoke.py
src/asset_allocation/: __init__.py  config.py  exceptions.py
src/asset_allocation/base_allocation/: __init__.py  anchors.py  strategic_selector.py
src/asset_allocation/baselines/: __init__.py  allocations.py
tests/: test_anchor_and_optimization.py  test_data_and_features.py  test_environment.py  test_evaluation.py  test_policy.py  test_projection.py  test_real_data_pipeline.py
(+58 files in other folders)
