[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic-anchor-allocation"
version = "0.1.0"
description = "CPU-verifiable strategic-anchor dynamic asset allocation research pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyarrow>=14",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
download = [
  "yfinance>=0.2.40",
]
train = [
  "torch>=2.2,<3",
]
report = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
